Add new project food

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
 
             <nav class="navbar">
-                <a href="#">trang chủ</a>
+                <a href="index.html">trang chủ</a>
                 <a href="#">câu chuyện coffee liam bảo</a>
-                <a href="#">menu</a>
-                <a href="#">dịch vụ</a>
+                <a href="#menu">menu</a>
+                <a href="#products">dịch vụ</a>
                 <a href="#">tuyển dụng</a>
-                <a href="#">blog</a>
+                <a href="#blogs">blog</a>
             </nav>
 
             <div class="icon">
@@ -80,7 +80,10 @@
         <section class="home" id="home">
             <div class="content">
                 <h3>liam bảo coffee</h3>
-                <p>hành trình 20 năm mang coffee chất việt đến với mọi người. Văn hoá dịch vụ tại Liam Coffee là sự chân thành trong cốt cách phục vụ của người Việt, kết hợp với tinh thần hiện đại hoá trong sự phát triển không ngừng của thời đại</p>
+                <p>hành trình 20 năm mang coffee chất việt đến với mọi người.
+                    Văn hoá dịch vụ tại Liam Coffee là sự chân thành trong cốt
+                    cách phục vụ của người Việt, kết hợp với tinh thần hiện đại
+                    hoá trong sự phát triển không ngừng của thời đại</p>
                 <a href="#" class="btn">tìm hiểu thêm</a>
             </div>
         </section>
@@ -95,15 +98,17 @@
         <!-- about section starts -->
         <section class="about" id="about">
             <h1 class="heading">
-                <span>about</span>us
+                <span>about</span> us
             </h1>
             <div class="row">
                 <div class="image">
-                    <img src="/img/cf1.jpeg">
+                    <img src="/img/cf2.jpg">
                 </div>
                 <div class="content">
                     <h3>làm sao để cà phê của bạn trở nên đặc biệt</h3>
-                    <p>Những dòng chảy tự hào mang theo hương vị của đất, trời và tâm huyết của con người kết thành câu chuyện về bản sắc văn hoá của người Việt Nam</p>
+                    <p>Những dòng chảy tự hào mang theo hương vị của đất, trời
+                        và tâm huyết của con người kết thành câu chuyện về bản
+                        sắc văn hoá của người Việt Nam</p>
                     <a href="#" class="btn">xem thêm</a>
                 </div>
             </div>
@@ -111,10 +116,291 @@
 
 
         <!-- about section end -->
+        <!-- menu section start -->
+        <section class="menu" id="menu">
+            <h1 class="heading">our <span>menu</span></h1>
+            <div class="box-container">
+                <div class="box">
+                    <img src="img/capheban/americano.png">
+                    <h3>Americano</h3>
+                    <div class="price">39.000vnd <span>49.000vnd</span></div>
+                    <a href="#" class="btn">thêm vào giỏ hàng</a>
+                </div>
+
+                <div class="box">
+                    <img src="img/capheta/bacxiu.png">
+                    <h3>bạc xỉu</h3>
+                    <div class="price">29.000vnd <span>39.000vnd</span></div>
+                    <a href="#" class="btn">thêm vào giỏ hàng</a>
+                </div>
+
+                <div class="box">
+                    <img src="img/tra&trasua/olong-cheese.png">
+                    <h3>olong cheese</h3>
+                    <div class="price">49.000vnd <span>59.000vnd</span></div>
+                    <a href="#" class="btn">thêm vào giỏ hàng</a>
+                </div>
 
 
 
+                <!-- repeat-box -->
+                <div class="box">
+                    <img src="img/capheban/americano.png">
+                    <h3>Americano</h3>
+                    <div class="price">59.000vnd <span>49.000vnd</span></div>
+                    <a href="#" class="btn">thêm vào giỏ hàng</a>
+                </div>
 
+                <div class="box">
+                    <img src="img/capheta/bacxiu.png">
+                    <h3>bạc xỉu</h3>
+                    <div class="price">59.000vnd <span>49.000vnd</span></div>
+                    <a href="#" class="btn">thêm vào giỏ hàng</a>
+                </div>
+
+                <div class="box">
+                    <img src="img/tra&trasua/olong-cheese.png">
+                    <h3>olong cheese</h3>
+                    <div class="price">59.000vnd <span>49.000vnd</span></div>
+                    <a href="#" class="btn">thêm vào giỏ hàng</a>
+                </div>
+                <div class="box">
+                    <img src="img/tra&trasua/olong-cheese.png">
+                    <h3>olong cheese</h3>
+                    <div class="price">49.000vnd <span>59.000vnd</span></div>
+                    <a href="#" class="btn">thêm vào giỏ hàng</a>
+                </div>
+
+
+
+                <!-- repeat-box -->
+                <div class="box">
+                    <img src="img/capheban/americano.png">
+                    <h3>Americano</h3>
+                    <div class="price">59.000vnd <span>49.000vnd</span></div>
+                    <a href="#" class="btn">thêm vào giỏ hàng</a>
+                </div>
+
+                <div class="box">
+                    <img src="img/capheta/bacxiu.png">
+                    <h3>bạc xỉu</h3>
+                    <div class="price">59.000vnd <span>49.000vnd</span></div>
+                    <a href="#" class="btn">thêm vào giỏ hàng</a>
+                </div>
+
+                <div class="box">
+                    <img src="img/tra&trasua/olong-cheese.png">
+                    <h3>olong cheese</h3>
+                    <div class="price">59.000vnd <span>49.000vnd</span></div>
+                    <a href="#" class="btn">thêm vào giỏ hàng</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- menu section ends -->
+        <section class="products" id="products">
+            <h1 class="heading"> our  <span>services</span></h1>
+            <div class="box-container">
+                <div class="box">
+                    <div class="icon">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <div class="image">
+                        <img src="img/service/dv1.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Phòng "Liam Giả"</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="price">- Tiếng sinh hoạt đầu tiên: 500.000đ <br>- Tiếng thứ hai trở đi: 300.000đ</div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="icon">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <div class="image">
+                        <img src="img/service/dv2.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Phòng “Năng Cán”</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="price">- Tiếng sinh hoạt đầu tiên: 700.000đ <br>- Tiếng thứ hai trở đi: 450.000đ</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- review section starts -->
+        <section class="review" id="review">
+            <h1 class="heading">Customer's <span>review</span></h1>
+            <div class="box-container">
+                <div class="box">
+                    <img src="img/quote-img.png" alt="" class="quote">
+                    <p>Không gì tuyệt hơn là được thưởng thức ly bạc xỉu vào mỗi
+                        buổi sáng. Trước khi đến phòng tập rô thường kêu trợ lý
+                        mua cho một ly tập cho xung</p>
+                    <img src="img/cr7.jpg" alt="" class="user">
+                    <h3>cristino ronaldo</h3>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <img src="img/quote-img.png" alt="" class="quote">
+                    <p>để có thể vượt qua rô thì si phải uống nhiều hơn rô, si
+                        cũng rất thích trà vải ở đây và bún đậu mắm tôm. Nếu
+                        giải nghệ thì tôi sẽ sang việt nam thi đấu cạnh tranh
+                        với rô</p>
+                    <img src="img/messi.jpg" alt="" class="user">
+                    <h3>leo messi</h3>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <img src="img/quote-img.png" alt="" class="quote">
+                    <p>Major của brian là blockchain, blockchain nó cũng như cà
+                        phê vậy. Là một vũ trụ đa hương vị, để cảm nhận được
+                        những hoương vị đó thì chỉ khi tôi đến đây mới có thể
+                        cảm nhận được. I love liam coffee </p>
+                    <img src="img/user1.jpg" alt="" class="user">
+                    <h3>brian thang</h3>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- review section ends -->
+
+
+        <!-- contact section starts -->
+        <section class="contact" id="contact">
+            <h1 class="heading"><span>contact</span> us</h1>
+            <div class="row">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d244.8917091683383!2d106.61390733360955!3d10.867259048180646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752b2076ec6e33%3A0xa1963c847202bb3e!2sMy%20Cafe!5e0!3m2!1sen!2s!4v1673632066449!5m2!1sen!2s"
+                    width="600" height="450" style="border:0;"
+                    allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <form action="">
+                    <h3>liên lạc</h3>
+                    <div class="inputBox">
+                        <span class="fas fa-user"></span>
+                        <input type="text" placeholder="Họ và tên">
+                    </div>
+                    <div class="inputBox">
+                        <span class="fas fa-envelope"></span>
+                        <input type="email" placeholder="Địa chỉ email">
+                    </div>
+                    <div class="inputBox">
+                        <span class="fas fa-phone"></span>
+                        <input type="number" placeholder="Số điện thoại">
+                    </div>
+                    <input type="submit" value="Liên hệ ngay" class="btn">
+                </form>
+            </div>
+        </section>
+        <!-- contact section ends -->
+        <!-- blog section starts -->
+        <section class="blogs" id="blogs">
+            <h1 class="heading"> our <span>blogs</span></h1>
+            <div class="container">
+                <div class="box">
+                    <div class="image">
+                        <img src="img/blog1.jpg" alt="">
+                    </div>
+                    <div class="content">
+                        <a href="#" class="title">làm sao để vẽ latte tại nhà?</a>
+                        <span>by admin / sep 19, 2018</span>
+                        <p>Đối với nhiều người trong chúng ta, nghệ thuật pha cà
+                            phê là một bí ẩn. Cách các nhân viên pha chế tạo
+                            ra...</p>
+                        <a href="#" class="btn">Đọc thêm</a>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="image">
+                        <img src="img/blog2.jpg" alt="">
+                    </div>
+                    <div class="content">
+                        <a href="#" class="title">"cây cà phê là một người mẹ
+                            tuyệt vời"</a>
+                        <span>by admin / sep 23, 2018</span>
+                        <p>Ngành công nghiệp cà phê phụ thuộc vào sức khỏe của
+                            cây cà phê. Khi cây phát triển mạnh,...</p>
+                        <a href="#" class="btn">Đọc thêm</a>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="image">
+                        <img src="img/blog3.jpg" alt="">
+                    </div>
+                    <div class="content">
+                        <a href="#" class="title">STAY HEALTHY, STAY SAFE!</a>
+                        <span>by admin / OCT 5, 2021</span>
+                        <p> Chúng ta đang ở trong một giai đoạn đầy thử thách
+                            với những tin tức tiêu cực mỗi ngày từ đại dịch
+                            Covid-19</p>
+                        <a href="#" class="btn">Đọc thêm</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- footer section starts -->
+        <section class="footer">
+            <div class="share">
+                <a href="#" class="fab fa-facebook-f"></a>
+                <a href="#" class="fab fa-twitter"></a>
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fab fa-linkedin"></a>
+                <a href="#" class="fab fa-pinterest"></a>
+            </div>
+            <div class="links">
+                <a href="#">trang chủ</a>
+                <a href="#">câu chuyện coffee liam bảo</a>
+                <a href="#">menu</a>
+                <a href="#">dịch vụ</a>
+                <a href="#">tuyển dụng</a>
+                <a href="#">blog</a>
+            </div>
+            <div class="credit">created by <span>Liam Bảo</span> | all rights reserved</div>
+        </section>
+        <!-- footer section ends -->
         <!-- js link -->
         <script src="js/script.js"></script>
     </body>
